// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keepOldFileContent should copy content from one file and merge it with pre-existing content from the destination file 1`] = `
"///////////////////////////////////////////////////////////////////
//        The contents of this file have been modified by        //
// create-new-app (https://github.com/qodesmith/create-new-app). //
//     The original contents have been commented out below.      //
///////////////////////////////////////////////////////////////////


console.log('source file contents')



/////////////////////////////
// ORIGINAL CONTENTS BELOW //
/////////////////////////////


// console.log('destination file contents')"
`;

exports[`keepOldFileContent should copy content from one file and merge it with pre-existing content from the destination file 2`] = `
"#################################################################
#        The contents of this file have been modified by        #
# create-new-app (https://github.com/qodesmith/create-new-app). #
#     The original contents have been commented out below.      #
#################################################################


console.log('source file contents')



###########################
# ORIGINAL CONTENTS BELOW #
###########################


# console.log('destination file contents')"
`;

exports[`keepOldFileContent should copy content from one file only, when there is no pre-existing file to overwrite 1`] = `"console.log('source file contents')"`;

exports[`keepOldFileContent should copy content from one file only, when there is no pre-existing file to overwrite 2`] = `"console.log('source file contents')"`;

exports[`keepOldFileContent should write content provided and merge it with pre-existing content from the destination file 1`] = `
"///////////////////////////////////////////////////////////////////
//        The contents of this file have been modified by        //
// create-new-app (https://github.com/qodesmith/create-new-app). //
//     The original contents have been commented out below.      //
///////////////////////////////////////////////////////////////////


// A comment



/////////////////////////////
// ORIGINAL CONTENTS BELOW //
/////////////////////////////


// console.log('destination file contents')"
`;

exports[`keepOldFileContent should write content provided and merge it with pre-existing content from the destination file 2`] = `
"#################################################################
#        The contents of this file have been modified by        #
# create-new-app (https://github.com/qodesmith/create-new-app). #
#     The original contents have been commented out below.      #
#################################################################


// A comment



###########################
# ORIGINAL CONTENTS BELOW #
###########################


# console.log('destination file contents')"
`;

exports[`keepOldFileContent should write content provided only, when there is no pre-existing file to overwrite 1`] = `"// A comment"`;

exports[`keepOldFileContent should write content provided only, when there is no pre-existing file to overwrite 2`] = `"// A comment"`;
